--- a/_posts/2020-05-19-rqb.md
+++ b/_posts/2020-05-19-rqb.md
@@ -3,7 +3,7 @@ title:  "rqb"
 date:   2020-05-19 17:00:16 -0400
 categories: thoughts
 layout: post
-permalink: /posts/red-queen-blues
+permalink: /posts/rqb
 --- 
 <style>/* webkit printing magic: print all background colors */
 html {
@@ -15,7 +15,10 @@ html {
 }
 
 html,
-
+body {
+	margin: 0;
+	padding: 0;
+}
 @media only screen {
 	body {
 		margin: 2em auto;
@@ -24,10 +27,7 @@ html,
 	}
 }
 
-body {
-	line-height: 1.5;
-	white-space: pre-wrap;
-}
+
 
 a,
 a.visited {
